# spread-lang-interpreter

./: .gitignore  Cargo.toml  README.md  out.html
src/: autocorrect.rs  closure.rs  compiler.rs  main.rs  table.rs
